@@ -84,5 +84,7 @@ bool MenuItemClass::menuClickedBool()
 
 void MenuItemClass::menuClickedGotoLine()
 {
+	DocumentClass	*document=qobject_cast<DocumentClass*>(this->mainKKEditClass->mainNotebook->currentWidget());
+	this->mainKKEditClass->history->pushToBackList(document->getCurrentLineNumber(),document->getFilePath());
 	this->mainKKEditClass->gotoLine(this->getMenuID());
 }
