@@ -1,7 +1,7 @@
 
 
 search forward/back checkbox
-history
+
 
 window subclass ?
 
