@@ -1,4 +1,6 @@
 0.5.2
+Done history class.
+Started history class.
 Fixed new editor menu item.
 Updated tab context menu icons.
 Added max recent files to prefs.
